# imsosorrybutinc

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: dependency-review.yaml  python-build-publish.yaml  python-ci.yaml
docs/source/: conf.py  index.rst
src/uwuifier/: __init__.py  _uwuifier.c
src/uwuifier.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_uwuify.py
